--- a/src/index.html
+++ b/src/index.html
@@ -11,6 +11,6 @@
 	<script src="https://vk.com/js/api/openapi.js?159" type="text/javascript"></script>
 </head>
 <body>
-<app-root class="page"></app-root>
+<app-root class="flex-fill d-flex"></app-root>
 </body>
 </html>
